welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:5: error: Missing closing brace `}' assumed here
override def run() {
^